# hello

hello/: pyproject.toml
hello/hello/scripts/: say_hello.py
